fit_predictor/tsp_gls/evaluates/run16/2024-12-23_14-26-05/problem_iter4_response28.txt_stdout.txt
Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 10, in <module>
    from gpt import heuristics_v2 as heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 26
    random\ufffd\u0176\ufffd = 0.1 * np.random.rand()
           ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xc8 in position 6: invalid continuation byte

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo/problems/tsp_gls/eval.py", line 12, in <module>
    from gpt import heuristics
  File "D:\ProgramLanguages\Programs\Python\code-gen\reevo\problems\tsp_gls\gpt.py", line 26
    random\ufffd\u0176\ufffd = 0.1 * np.random.rand()
           ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xc8 in position 6: invalid continuation byte
